# ska-pss-supplementary-code

./: .gitignore  README.md
CbfPulsarPacketReader/: CbfPsrHeader.cpp  CbfPsrHeader.h  CbfPsrPacket.cpp  CbfPsrPacket.h  main  main.cpp
Convolution_filter_generation/: Compare_final_filters.py  Filter_analysis.py  Generate_filters.py  README.md
FDAS_HSUM_sifting/: FDAS_sifting_preliminary.py  Loop_signal_to_noise_vectors_500Hz_20_m_s_s_uniform_filters_integer_matlab_domed_power_thresholds_sifted.txt
FPGA_FDAS_config_generator/: Complete_FPGA_FDAS_config.txt  Complete_FPGA_FDAS_config_15seeds_11slopes.txt  Complete_FPGA_FDAS_config_script_generated_HSUM.txt  Comprehensive_Hardware_Mapping.xlsx  FDAS_config_from_yaml.py  FDAS_prototype_complete_config.txt  HPSEL_Layout_Indices.xlsx  HPSEL_Layout_Summer1_Hex.xlsx  HPSEL_Layout_Summer2_Hex.xlsx  HPSEL_Layout_Widths.xlsx  HSUM_config_address_value_list.txt  HSUM_config_and_diagnostic_sheets.py  HSUM_config_martin_11slopes_15seeds.txt  README.md  control_params.yaml  conv_params.yaml  hsum_params.yaml
HSUM_config_generation/: Combine_two_runs.py  Complete_HPSEL_combine.py  Complete_HPSEL_final_addresses_values_single_run_5slopes.xlsx  Complete_HPSEL_only_addresses_values_single_run_5slopes.txt  Complete_HPSEL_only_addresses_values_single_run_5slopes_with_config.txt  Complete_HPSEL_run1.py  Complete_HPSEL_run1_seed_slope_harmonic_number.xlsx  Complete_HPSEL_run1_seed_slope_harmonic_values_summer1.xlsx  Complete_HPSEL_run1_seed_slope_harmonic_values_summer2.xlsx  Complete_HPSEL_run1_seed_slope_harmonic_width.xlsx  Complete_HPSEL_run2.py  Complete_HPSEL_run2_seed_slope_harmonic_number.xlsx  Complete_HPSEL_run2_seed_slope_harmonic_values_summer1.xlsx  FDAS_config.txt  (+6 more)
kafka/: CMakeLists.txt  pytest.ini  readme.md
kafka/consumer/: Dockerfile  pyproject.toml  readme.md
kafka/consumer/config/: consumer.conf
kafka/consumer/pss_sdp_consumer/: cli.py  config.py  consumer.py  contract.py  handlers.py  metrics.py
kafka/docs/: AT4-2179_message_contract.md  at4-2194-e2e-validation.md
kafka/infra/: docker-compose.yaml  kraft.properties  readme.md
kafka/producer/: CMakeLists.txt  Dockerfile
kafka/producer/config/: producer.conf
kafka/producer/include/: KafkaProducer.h  KafkaProducerConfig.h  SpccCandidateMessage.h  SpccInputLoader.h
kafka/producer/src/: KafkaProducer.cpp  KafkaProducerConfig.cpp  SpccCandidateMessage.cpp  SpccInputLoader.cpp  main.cpp
kafka/tests/: CMakeLists.txt  _helpers.py  conftest.py  test_consumer_commit_resume.py  test_consumer_config.py  test_consumer_contract.py  test_consumer_handlers.py  test_consumer_metrics.py  test_consumer_poison.py  test_consumer_roundtrip.py  test_kafka_producer.cpp  test_make_cheetah_fixture.py
kafka/tools/: consume_compact.py  e2e_smoke.sh  make_cheetah_fixture.py  make_fixture.py
(+30808 files in other folders)
